<resources>
    <string name="app_name" translatable="false">Skyblue Contacts</string>
    <string name="contact_permission_denied_open_app_settings">Contact permission denied. Open app settings. to enable read contacts permission manually!</string>
    <string name="call_permission_denied_open_app_settings">Call permission denied. Open app settings. to enable call permission manually!</string>
    <string name="contacts_list">Contacts List</string>
    <string name="sign_in">Sign In</string>
    <string name="client_id">503820036345-ia677groolm9o1qrogbabcgb74jf56bc.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="click_to_logout_now">Click to logout now</string>
    <string name="app_language">App language</string>
    <string name="english_device_default_language">English ( device default language )</string>
    <string name="display">Display</string>
    <string name="theme_font_size">Theme, font size</string>
    <string name="manage_your_account">Manage your account, delete account</string>
    <string name="my_account">My Account</string>
    <string name="login_failed">Login Failed!</string>
    <string name="google_sign_in_success">Google sign-in success</string>
    <string name="google_sign_in_failed">Google sign-in failed: %1$s</string>
    <string name="no_contacts_found">No contacts found!</string>
    <string name="contacts_sync_please_wait">Contacts sync. please wait.</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="no_contacts_found_n_please_add_contacts_to_cloud">No contacts found. \n Please add contacts to cloud.</string>
    <string name="add_contacts">Add contacts</string>
    <string name="save_contact">Save contact</string>
    <string name="permission_granted">Permission granted</string>
    <string name="call_permission_denied">Call permission denied</string>
    <string name="phone_number_not_empty">Phone number not empty</string>
    <string name="error_try_again">Error. try again!</string>
    <string name="contacts_saved_success">Contacts saved success</string>
    <string name="icon_save_contact">Icon save contact</string>
    <string name="icon_delete">Icon delete</string>
    <string name="number_1">Number one</string>
    <string name="number_2">Number two</string>
    <string name="number_three">Number three</string>
    <string name="number_four">Number four</string>
    <string name="number_five">Number five</string>
    <string name="number_six">Number six</string>
    <string name="number_seven">Number seven</string>
    <string name="number_eight">Number eight</string>
    <string name="number_nine">Number nine</string>
    <string name="star_key">Star key</string>
    <string name="hash_key">Hash key</string>
    <string name="call_button">Call button</string>
    <string name="number_zero">Number zero</string>
    <string name="back_button">Back to previous screen</string>
    <string name="check_all_button">Mark all contact</string>
    <string name="_0" translatable="false">0</string>
    <string name="selected">selected</string>
    <string name="save_cloud_now">Save cloud now</string>
    <string name="cloud_contacts">Cloud contacts</string>
    <string name="no_contacts_image">No contacts</string>
    <string name="open_dial_pad">Open dial pad</string>
    <string name="display_settings">Display settings</string>
    <string name="icon_theme">Icon theme</string>
    <string name="theme">Theme</string>
    <string name="system_default_theme">System default</string>
    <string name="icon_font">font</string>
    <string name="font_size">Font size</string>
    <string name="medium">Medium</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="initializing">initializing</string>
    <string name="icon_login_vector">login</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="settings">Settings</string>
    <string name="icon_settings">Isettings</string>
    <string name="icon_no_contacts">no contacts</string>
    <string name="icon_user">user</string>
    <string name="icon_display_settings">display settings</string>
    <string name="icon_language_settings">language settings</string>
    <string name="icon_logout">logout</string>
    <string name="choose_one">Choose one</string>
    <string name="select_from_contacts">Select from contacts</string>
    <string name="add_manually">Add manually</string>
    <string name="import_vcf_file">Import .VCF file</string>
    <string name="open">Open</string>
    <string name="system_default">System default</string>
    <string name="choose_theme">Choose theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="choose_font_size">Choose font size</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="select_language">Select language</string>
    <string name="english" translatable="false">English</string>
    <string name="tamil" translatable="false">Tamil</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="view_contacts_from_cloud">View contacts from cloud</string>
    <string name="search_contacts">Search contacts</string>
    <string name="contacts_sync_success">Contacts sync success</string>
    <string name="saving_please_wait">Saving please wait.</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_app_needs_access_to_your_storage_to_select_vcf_files">This app needs access to your storage to select VCF files.</string>
    <string name="allow">Allow</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="whatspp">Whatspp</string>
    <string name="first_name" translatable="false">First name</string>
    <string name="phone_" translatable="false">1234567890</string>
    <string name="error_deleting_contact">Error delete contact!</string>
    <string name="deleted_success">Deleted success!</string>
    <string name="about">About</string>
    <string name="skyblue_contacts" translatable="false">Skyblue contacts</string>
    <string name="a_safe_type_contact_app">A safe type contact app</string>
    <string name="developer_message">To protect contacts from other apps. Highly secured end-to-end encryption technology was used. Cloud contacts are never stored in the mobile device\'s default contacts storage and SIM storage. Users can access contacts synced from the server can be accessible Offline. Easily access with premium features dark mode and light mode, with increase app font size. Stunning UI. Users can delete contacts permanently from cloud storage.</string>
    <string name="no_premium_purchases_and_no_ads">`No premium purchases. and No ads \n 100% Free`</string>
    <string name="prasanth">- Prasanth</string>
    <string name="make_a_small_donation">Make a small donation via Paypal</string>
    <string name="make_payment_now">Make payment now</string>
    <string name="delete_account">Delete account</string>
    <string name="permanently_delete_your_account">Permanently delete your account</string>
    <string name="app_permissions">App permissions</string>
    <string name="contact">Contact</string>
    <string name="to_access_mobile_contacts_message">To access mobile contacts for user can add contacts to cloud. synch after you can use offline. \n \nContacts are securely transferred to the cloud with end-to-end encryption.</string>
    <string name="user_can_make_calls_from_cloud_message">User can make calls from cloud synced contacts. and make calls from skyblue contacts app dialpad.</string>
    <string name="storage">Storage</string>
    <string name="import_contacts_from_vcf_file">Import contacts from .VCF file</string>
    <string name="continue_">Continue</string>
    <string name="loading_privacy_policy">Loading privacy policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree">Agree</string>
    <string name="welcome_to_nskyblue_contacts">Welcome to \nSkyblue contacts</string>
    <string name="no_ads_no_purchase">No ads No purchase</string>
    <string name="_100_free">100% Free</string>
    <string name="sync_contacts">sync contacts</string>
    <string name="sync_contacts_now">Sync contacts now</string>
    <string name="trash">Trash</string>
    <string name="deleted_contacts">Deleted contacts and restore</string>
    <string name="about_app">About app</string>
    <string name="app_development_info">App development info</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="empty_trash">Trash is empty!</string>
    <string name="this_action_can_t_undone">This action can\'t undone</string>
    <string name="delete_contact_permanently">Delete contact permanently</string>
    <string name="yes">Yes</string>
    <string name="contact_deleted_successfully">Contact deleted successfully</string>
    <string name="restore">Restore</string>
    <string name="contact_restored_successfully">Contact restored successfully</string>
    <string name="error_restore">Error restore</string>
    <string name="signed_out_successfully">Signed out successfully</string>
    <string name="sync_started">Sync started</string>
    <string name="select_all">Select all</string>
    <string name="saved_success">Saved success</string>
    <string name="export">Export</string>
    <string name="export_vcf_file">Export .VCF file</string>
    <string name="exporting_contacts_please_wait">Exporting contacts. Please wait...</string>
    <string name="rename">Rename</string>
    <string name="rename_contact">Rename contact</string>
    <string name="enter_name">Enter name</string>
</resources>