<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/phoneNumber"
        android:textColor="#666"
        android:text="@string/phone_"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/callNow"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/call"
                android:src="@drawable/ic_call"
                app:tint="@color/textColor"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/message"
                android:src="@drawable/ic_message"
                app:tint="@color/textColor"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/whatspp"
                android:src="@drawable/ic_whatsapp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
