<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/backgroundColor"
    tools:context=".activity.settings.DisplaySettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_cancel"
                app:tint="@color/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/display_settings"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="62dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:contentDescription="@string/icon_theme"
                    android:src="@drawable/ic_theme"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:tint="@color/textColor" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:text="@string/theme"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/currentTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/system_default_theme"
                    android:textColor="@color/textLightColor"
                    android:fontFamily="sans-serif"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fontSize"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:contentDescription="@string/icon_font"
                    android:src="@drawable/ic_font_size"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:tint="@color/textColor" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:text="@string/font_size"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fontSizeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:text="@string/medium"
                    android:textColor="@color/textLightColor"
                    android:fontFamily="sans-serif"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>